partie_antlr/ParserParser.java
// Generated from Parser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, CONTRAINTES=9, 
		IDENTIFIANT=10, NEWLINE=11, WS=12, ENTIER=13;
	public static final int
		RULE_start = 0, RULE_parsing = 1, RULE_declDisposition = 2, RULE_declEleves = 3, 
		RULE_declContrainte = 4, RULE_blocDisposition = 5, RULE_regleAmenagement = 6, 
		RULE_blocEleves = 7, RULE_eleve = 8, RULE_blocContraintes = 9, RULE_contraintes = 10, 
		RULE_finInstruction = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "parsing", "declDisposition", "declEleves", "declContrainte", 
			"blocDisposition", "regleAmenagement", "blocEleves", "eleve", "blocContraintes", 
			"contraintes", "finInstruction"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DISPOSITION'", "'CLASSE'", "'CONTRAINTES'", "'{'", "'}'", "'rangees'", 
			"'Rangee'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "CONTRAINTES", 
			"IDENTIFIANT", "NEWLINE", "WS", "ENTIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Parser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	    private String fonctionEvalContrainteSimple (String eleve, String constraint, ConstraintBuilder constraintBuilder, Classroom classe) { //évalue la contrainte donnée par son abbréviation
	      if (classe.getStudent(eleve) != null){ //si l'élève existe dans la classe
	        if ( constraint.equals("D") ){
	            constraintBuilder.build("au rang", classe.getStudent(eleve), 1); //on positionne la contrainte sur l'eleve au premier rang
	            return eleve + " va devant ";
	        } else if ( constraint.equals("F") ){
	            constraintBuilder.build("au rang", classe.getStudent(eleve), classe.getRowNumber()-1); //on positionne la contrainte sur l'eleve au dernier rang
	            return eleve + " va au fond.";
	        } else if ( constraint.equals("L") ){
	            return " loin de ";
	        } else if ( constraint.equals("P") ){
	                return " près de ";
	        } else {
	           System.err.println("Contraine incorrecte : '"+constraint+"'");
	           throw new IllegalArgumentException("Opérateur arithmÃ©tique incorrect : '"+constraint+"'");
	        }
	      }
	      else {
	        return "L\'élève \"" + eleve + "\" n\'a pas été trouvé dans la classe.";
	      }
	    }

	    private String fonctionEvalContrainteDouble (String eleve1, String eleve2, String constraint, ConstraintBuilder constraintBuilder, Classroom classe) {
	      if (classe.getStudent(eleve1) != null && eleve2 !=null){ //si les élèves existent dans la classe
	        if ( constraint.equals("L") ){
	            constraintBuilder.build("loin de", classe.getStudent(eleve1), classe.getStudent(eleve2));
	            return eleve1 + " loin de " + eleve2;
	        } else if ( constraint.equals("P") ){
	            constraintBuilder.build("a cote de", classe.getStudent(eleve1), classe.getStudent(eleve2));
	            return eleve1 + " près de " + eleve2;
	        } else {
	           System.err.println("Contraine incorrecte : '"+constraint+"'");
	           throw new IllegalArgumentException("Opérateur arithmÃ©tique incorrect : '"+constraint+"'");
	        }
	      }
	      else {
	        return "L élève " + eleve1 + " ou " + eleve2 + "n a pas été trouvé dans la classe.";
	      }
	    }

	    public Classroom classe;
	    private ConstraintBuilder constraintBuilder = new ConstraintBuilder();

	public ParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ParsingContext parsing() {
			return getRuleContext(ParsingContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ParserParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			parsing();
			setState(25);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParsingContext extends ParserRuleContext {
		public String code;
		public DeclDispositionContext declDisposition;
		public DeclElevesContext declEleves;
		public DeclContrainteContext declContrainte;
		public List<DeclDispositionContext> declDisposition() {
			return getRuleContexts(DeclDispositionContext.class);
		}
		public DeclDispositionContext declDisposition(int i) {
			return getRuleContext(DeclDispositionContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ParserParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ParserParser.NEWLINE, i);
		}
		public List<DeclElevesContext> declEleves() {
			return getRuleContexts(DeclElevesContext.class);
		}
		public DeclElevesContext declEleves(int i) {
			return getRuleContext(DeclElevesContext.class,i);
		}
		public List<DeclContrainteContext> declContrainte() {
			return getRuleContexts(DeclContrainteContext.class);
		}
		public DeclContrainteContext declContrainte(int i) {
			return getRuleContext(DeclContrainteContext.class,i);
		}
		public ParsingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parsing; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterParsing(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitParsing(this);
		}
	}

	public final ParsingContext parsing() throws RecognitionException {
		ParsingContext _localctx = new ParsingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parsing);
		 ((ParsingContext)_localctx).code =  new String(); 
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(27);
				((ParsingContext)_localctx).declDisposition = declDisposition();
				 _localctx.code += ((ParsingContext)_localctx).declDisposition.code; 
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(35);
					match(NEWLINE);
					}
					} 
				}
				setState(40);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(41);
				((ParsingContext)_localctx).declEleves = declEleves();
				 _localctx.code += ((ParsingContext)_localctx).declEleves.code; 
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(49);
				match(NEWLINE);
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(55);
				((ParsingContext)_localctx).declContrainte = declContrainte();
				 _localctx.code += ((ParsingContext)_localctx).declContrainte.code; 
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 _localctx.code += "\n---fin de l\'interprétation---\n"; 
			}
			_ctx.stop = _input.LT(-1);
			 System.out.println(_localctx.code); 
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclDispositionContext extends ParserRuleContext {
		public String code;
		public BlocDispositionContext blocDisposition;
		public BlocDispositionContext blocDisposition() {
			return getRuleContext(BlocDispositionContext.class,0);
		}
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public DeclDispositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declDisposition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterDeclDisposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitDeclDisposition(this);
		}
	}

	public final DeclDispositionContext declDisposition() throws RecognitionException {
		DeclDispositionContext _localctx = new DeclDispositionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declDisposition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__0);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(66);
				finInstruction();
				}
			}

			setState(69);
			((DeclDispositionContext)_localctx).blocDisposition = blocDisposition();
			setState(70);
			finInstruction();

			          ((DeclDispositionContext)_localctx).code =  ((DeclDispositionContext)_localctx).blocDisposition.code;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclElevesContext extends ParserRuleContext {
		public String code;
		public BlocElevesContext blocEleves;
		public BlocElevesContext blocEleves() {
			return getRuleContext(BlocElevesContext.class,0);
		}
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public DeclElevesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declEleves; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterDeclEleves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitDeclEleves(this);
		}
	}

	public final DeclElevesContext declEleves() throws RecognitionException {
		DeclElevesContext _localctx = new DeclElevesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declEleves);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__1);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(74);
				finInstruction();
				}
			}

			setState(77);
			((DeclElevesContext)_localctx).blocEleves = blocEleves();
			setState(78);
			finInstruction();

			          ((DeclElevesContext)_localctx).code =  ((DeclElevesContext)_localctx).blocEleves.code;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContrainteContext extends ParserRuleContext {
		public String code;
		public BlocContraintesContext blocContraintes;
		public BlocContraintesContext blocContraintes() {
			return getRuleContext(BlocContraintesContext.class,0);
		}
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public DeclContrainteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declContrainte; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterDeclContrainte(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitDeclContrainte(this);
		}
	}

	public final DeclContrainteContext declContrainte() throws RecognitionException {
		DeclContrainteContext _localctx = new DeclContrainteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declContrainte);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__2);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(82);
				finInstruction();
				}
			}

			setState(85);
			((DeclContrainteContext)_localctx).blocContraintes = blocContraintes();
			setState(86);
			finInstruction();

			          ((DeclContrainteContext)_localctx).code =  ((DeclContrainteContext)_localctx).blocContraintes.code;
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocDispositionContext extends ParserRuleContext {
		public String code;
		public RegleAmenagementContext regleAmenagement;
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public List<RegleAmenagementContext> regleAmenagement() {
			return getRuleContexts(RegleAmenagementContext.class);
		}
		public RegleAmenagementContext regleAmenagement(int i) {
			return getRuleContext(RegleAmenagementContext.class,i);
		}
		public BlocDispositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocDisposition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterBlocDisposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitBlocDisposition(this);
		}
	}

	public final BlocDispositionContext blocDisposition() throws RecognitionException {
		BlocDispositionContext _localctx = new BlocDispositionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blocDisposition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((BlocDispositionContext)_localctx).code =  "Disposion de la salle :\n";
			setState(90);
			match(T__3);
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(91);
				finInstruction();
				}
				break;
			}
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6 || _la==ENTIER) {
				{
				{
				setState(94);
				((BlocDispositionContext)_localctx).regleAmenagement = regleAmenagement();
				_localctx.code += ((BlocDispositionContext)_localctx).regleAmenagement.code + "\n";
				setState(96);
				finInstruction();
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(103);
				finInstruction();
				}
			}

			setState(106);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegleAmenagementContext extends ParserRuleContext {
		public String code;
		public Token ENTIER;
		public Token num;
		public Token nbr;
		public List<TerminalNode> ENTIER() { return getTokens(ParserParser.ENTIER); }
		public TerminalNode ENTIER(int i) {
			return getToken(ParserParser.ENTIER, i);
		}
		public RegleAmenagementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regleAmenagement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterRegleAmenagement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitRegleAmenagement(this);
		}
	}

	public final RegleAmenagementContext regleAmenagement() throws RecognitionException {
		RegleAmenagementContext _localctx = new RegleAmenagementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_regleAmenagement);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				((RegleAmenagementContext)_localctx).ENTIER = match(ENTIER);
				setState(109);
				match(T__5);

				        ((RegleAmenagementContext)_localctx).code =  "La classe contient " + (((RegleAmenagementContext)_localctx).ENTIER!=null?((RegleAmenagementContext)_localctx).ENTIER.getText():null) + " rangées.";
				        classe = new Classroom(Integer.parseInt((((RegleAmenagementContext)_localctx).ENTIER!=null?((RegleAmenagementContext)_localctx).ENTIER.getText():null))); //on transforme l'objet ENTIER en type int puis on le passe à Classroom qui a besoin de connaître son nombre de rangée pour être instanciée
				      
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__6);
				setState(112);
				((RegleAmenagementContext)_localctx).num = match(ENTIER);
				setState(113);
				((RegleAmenagementContext)_localctx).nbr = match(ENTIER);

				        ((RegleAmenagementContext)_localctx).code =  "La rangée numéro " + (((RegleAmenagementContext)_localctx).num!=null?((RegleAmenagementContext)_localctx).num.getText():null) + " possède " + (((RegleAmenagementContext)_localctx).nbr!=null?((RegleAmenagementContext)_localctx).nbr.getText():null) + " tables.";
				        //Méthode pour déclarer à la classe une nouvelle rangée;
				        classe.setNumberOfPlace(Integer.parseInt((((RegleAmenagementContext)_localctx).num!=null?((RegleAmenagementContext)_localctx).num.getText():null)), Integer.parseInt((((RegleAmenagementContext)_localctx).nbr!=null?((RegleAmenagementContext)_localctx).nbr.getText():null)));
				      
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocElevesContext extends ParserRuleContext {
		public String code;
		public EleveContext eleve;
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public List<EleveContext> eleve() {
			return getRuleContexts(EleveContext.class);
		}
		public EleveContext eleve(int i) {
			return getRuleContext(EleveContext.class,i);
		}
		public BlocElevesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocEleves; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterBlocEleves(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitBlocEleves(this);
		}
	}

	public final BlocElevesContext blocEleves() throws RecognitionException {
		BlocElevesContext _localctx = new BlocElevesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blocEleves);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((BlocElevesContext)_localctx).code =  "\nListe des élèves :\n";
			setState(118);
			match(T__3);
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(119);
				finInstruction();
				}
				break;
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIANT) {
				{
				{
				setState(122);
				((BlocElevesContext)_localctx).eleve = eleve();
				_localctx.code += ((BlocElevesContext)_localctx).eleve.code  + "\n";
				setState(124);
				finInstruction();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7 || _la==NEWLINE) {
				{
				setState(131);
				finInstruction();
				}
			}

			setState(134);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EleveContext extends ParserRuleContext {
		public String code;
		public Token IDENTIFIANT;
		public TerminalNode IDENTIFIANT() { return getToken(ParserParser.IDENTIFIANT, 0); }
		public EleveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eleve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterEleve(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitEleve(this);
		}
	}

	public final EleveContext eleve() throws RecognitionException {
		EleveContext _localctx = new EleveContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_eleve);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((EleveContext)_localctx).IDENTIFIANT = match(IDENTIFIANT);
			((EleveContext)_localctx).code =  (((EleveContext)_localctx).IDENTIFIANT!=null?((EleveContext)_localctx).IDENTIFIANT.getText():null);
			      classe.addStudent((((EleveContext)_localctx).IDENTIFIANT!=null?((EleveContext)_localctx).IDENTIFIANT.getText():null));
			      
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocContraintesContext extends ParserRuleContext {
		public String code;
		public ContraintesContext contraintes;
		public List<FinInstructionContext> finInstruction() {
			return getRuleContexts(FinInstructionContext.class);
		}
		public FinInstructionContext finInstruction(int i) {
			return getRuleContext(FinInstructionContext.class,i);
		}
		public List<ContraintesContext> contraintes() {
			return getRuleContexts(ContraintesContext.class);
		}
		public ContraintesContext contraintes(int i) {
			return getRuleContext(ContraintesContext.class,i);
		}
		public BlocContraintesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blocContraintes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).enterBlocContraintes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ParserListener ) ((ParserListener)listener).exitBlocContraintes(this);
		}
	}
